syntax = "proto3";

package bytebase.store;

import "google/api/resource.proto";

option go_package = "generated-go/store";

message RevisionPayload {
  // Format: projects/{project}/releases/{release}
  // Can be empty.
  string release = 1 [(google.api.resource_reference) = {type: "bytebase.com/Release"}];

  // Format: projects/{project}/releases/{release}/files/{id}
  // Can be empty.
  string file = 2;

  // The sheet that holds the content.
  // Format: projects/{project}/sheets/{sheet}
  string sheet = 3 [(google.api.resource_reference) = {type: "bytebase.com/Sheet"}];
  // The SHA256 hash value of the sheet.
  string sheet_sha256 = 4;

  // The task run associated with the revision.
  // Can be empty.
  // Format: projects/{project}/rollouts/{rollout}/stages/{stage}/tasks/{task}/taskRuns/{taskRun}
  string task_run = 5 [(google.api.resource_reference) = {type: "bytebase.com/TaskRun"}];
}
